:memo: README.md 작성 및 테스트 코드 작성
