# docs/swagger.json
@@ -8,6 +8,36 @@
   "basePath": "/",
   "paths": {
     "/v1/board": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "summary": "게시판 목록 조회 API",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "title",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/board.BoardsMsg"
+            }
+          },
+          "409": {
+            "description": "Conflict",
+            "schema": {
+              "$ref": "#/definitions/server.Error"
+            }
+          }
+        }
+      },
       "post": {
         "consumes": [
           "application/json"
@@ -34,10 +64,110 @@
               "$ref": "#/definitions/board.BoardMsg"
             }
           },
-          "401": {
-            "description": "Unauthorized",
+          "409": {
+            "description": "Conflict",
             "schema": {
               "$ref": "#/definitions/server.Error"
+            }
+          }
+        }
+      }
+    },
+    "/v1/board/{id}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "summary": "게시판 조회 API",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "Board ID",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/board.BoardMsg"
+            }
+          },
+          "409": {
+            "description": "Conflict",
+            "schema": {
+              "$ref": "#/definitions/server.Error"
+            }
+          }
+        }
+      }
+    },
+    "/v1/join": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "summary": "회원가입 API",
+        "parameters": [
+          {
+            "description": "JoinRequest",
+            "name": "JoinRequest",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/user.JoinRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/user.UserMsg"
+            }
+          },
+          "409": {
+            "description": "Conflict",
+            "schema": {
+              "$ref": "#/definitions/server.Error"
+            }
+          }
+        }
+      }
+    },
+    "/v1/login": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "summary": "로그인 API",
+        "parameters": [
+          {
+            "description": "LoginRequest",
+            "name": "LoginRequest",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/user.LoginRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/user.UserMsg"
             }
           },
           "409": {
@@ -74,6 +204,17 @@
         }
       }
     },
+    "board.BoardsMsg": {
+      "type": "object",
+      "properties": {
+        "boards": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/board.BoardMsg"
+          }
+        }
+      }
+    },
     "board.CreateBoardRequest": {
       "type": "object",
       "properties": {
@@ -93,6 +234,45 @@
         },
         "message": {
           "type": "string"
+        }
+      }
+    },
+    "user.JoinRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "user.LoginRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "user.UserMsg": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "userId": {
+          "type": "integer"
         }
       }
     }
